Added Header + Nav bar section + main image

--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>eCOMMERCE-WEB-SITE</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div>
+                <ul>
+                    <li>HOME</li>
+                    <li>ABOUT</li>
+                    <li>PRODUCTS</li>
+                    <li>CONTACT</li>
+                </ul>
+            </div>
+            <div class="center_logo_div">
+                <span>CARA</span>
+                    <img class="logo"src="./assets/icons8-pottery-96.png" alt="pottery icon">
+                <span>CARA</span>
+            </div>
+            <div class="search_container">      
+                    <form action="/" method="GET" class="form">
+                        <input type="search" placeholder="Search" class="search-field" />
+                            <button type="submit" class="search-button">
+                                <img class="search_icon" src="./assets/1200px-Google_Magnifying_Glass.svg.png">
+                            </button>
+                    </form>
+                <div class="cart">CART (0)</div>
+            </div>
+        </nav>
+
+    </header>
+
+    <container class="main_image"><img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt=""></container>
     
 </body>
 </html>
