cleaned up the html + css

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <li>CONTACT</li>
                 </ul>
             </div>
-            <div class="center_logo_div">
-                <span>CARA</span>
+            <div class="flex_div">
+                <p>CARA</p>
                     <img class="logo"src="./assets/icons8-pottery-96.png" alt="pottery icon">
-                <span>CARA</span>
+                <p>CARA</p>
             </div>
             <div class="search_container">      
                     <form action="/" method="GET" class="form">
@@ -36,7 +36,11 @@
 
     </header>
 
-    <container class="main_image"><img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt=""></container>
+    <section class="hero">
+        <div class="gradient-bg"></div>
+        <!-- <h1>CERAMICS<br> CRAFTED BY<br> HAND...</h1>
+        <h1>... FROM THE <br>GROUND UP</h1> -->
+    </section>
     
 </body>
 </html>
