created the entire html structure of the website and added all images and created hyperlinks to sections of the page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="home">
             <div>
                 <ul>
-                    <li>HOME</li>
-                    <li>ABOUT</li>
-                    <li>PRODUCTS</li>
-                    <li>CONTACT</li>
+                    <a href="#home"><li>HOME</li></a>
+                    <a href="#about"><li>ABOUT</li></a>
+                    <a href="#products"><li>PRODUCTS</li></a>
+                    <a href="#contact"><li>CONTACT</li></a>
                 </ul>
             </div>
             <div class="flex_div">
@@ -42,5 +42,172 @@
         <h1>... FROM THE <br>GROUND UP</h1> -->
     </section>
     
+    <main>
+        <section>
+
+            <h2 id="about">ABOUT US</h2>
+            <p class="about_text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quidem ipsa delectus aliquid quisquam saepe distinctio eveniet eum impedit pariatur, quasi voluptas similique quibusdam placeat eaque tempore aspernatur reiciendis exercitationem.
+            </p>
+            <img src="./assets/Vase_Dame_2048x2048.jpg">
+            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg">
+        </section>
+        <section>
+            <h2 id="products">PRODUCTS</h2>
+            <div class="card_container">
+        
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg">
+                    <h3 class="card_title">
+                        LEMON GARLIC CHICKEN :
+                    </h3>
+                    <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque a odio asperiores officia autem exercitationem. Odio vero nesciunt debitis facilis corporis, necessitatibus non commodi laudantium mollitia repellat provident, similique quidem.</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg">
+                    <h3 class="card_title">
+                        SHRIMP BURRITOS :
+                    </h3>
+                    <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore aspernatur neque modi, pariatur sunt a nulla facere sed, iusto fuga in dolorem eos maxime nesciunt magnam, ratione non corporis porro.</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>   
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg">
+                    <h3 class="card_title">
+                        BAKED EGG DISH :
+                    </h3>
+                    <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsum cumque aliquam explicabo quae voluptatem. Harum facilis ipsam sit, maxime mollitia sint quos consequuntur, similique praesentium nemo ea. Reprehenderit, perferendis?</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg">
+                    <h3 class="card_title">
+                        FLUFFY FRENCH TOAST :
+                    </h3>
+                    <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio reiciendis veritatis, labore beatae odit adipisci blanditiis recusandae voluptas nemo? Eius nam deserunt officiis voluptatum suscipit soluta magni corrupti ea impedit.</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>>
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="assets/linh-le-a0rE64YJDA4-unsplash.jpg">
+                    <h3 class="card_title">
+                        BUTTERNUT SQUASH SOUP :
+                    </h3>
+                    <p class="card_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quibusdam impedit maxime quod modi nesciunt, quaerat adipisci numquam assumenda labore, corporis architecto quo ut ipsum possimus tempore id hic totam?</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg">
+                    <h3 class="card_title">
+                        STEAK AND BROCCOLI :
+                    </h3>
+                    <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus enim possimus magni veritatis modi voluptate, maiores labore ducimus quis exercitationem molestiae, dolores nulla voluptates. Sapiente illo quidem aspernatur facilis!</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg">
+                    <h3 class="card_title">
+                        FLUFFY FRENCH TOAST :
+                    </h3>
+                    <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio reiciendis veritatis, labore beatae odit adipisci blanditiis recusandae voluptas nemo? Eius nam deserunt officiis voluptatum suscipit soluta magni corrupti ea impedit.</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="assets/oriento-l0ah3UBLppo-unsplash.jpg">
+                    <h3 class="card_title">
+                        BUTTERNUT SQUASH SOUP :
+                    </h3>
+                    <p class="card_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quibusdam impedit maxime quod modi nesciunt, quaerat adipisci numquam assumenda labore, corporis architecto quo ut ipsum possimus tempore id hic totam?</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>
+                <a href="#">
+                <div class="card">
+                    <img class="card_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg">
+                    <h3 class="card_title">
+                        STEAK AND BROCCOLI :
+                    </h3>
+                    <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus enim possimus magni veritatis modi voluptate, maiores labore ducimus quis exercitationem molestiae, dolores nulla voluptates. Sapiente illo quidem aspernatur facilis!</p>
+                    <a href="#">Learn More</a>
+                    <button>
+                        ADD TO CART
+                    </button>
+                </div>
+                </a>
+        </div>
+            </section>
+            <section>
+                <h2 id="contact">
+                    CONTACT US
+                </h2>
+                <form action="/action_page.php">
+                    <label for="fname">Email:</label><br>
+                    <input type="text" id="fname" value=""><br><br>
+                    <textarea id="message" rows="4" cols="50"></textarea><br><br>
+                    <input type="submit" value="Submit">
+                  </form>
+            </section>
+    </main>
+    <footer>
+        <div class="footer_top">
+            <span class="footer_top_left">
+                <img src="./assets/icons8-youtube-96.png">
+                <img src="./assets/icons8-facebook-96 (1).png">
+            </span>
+        <span class="footer_top_center">
+            <p>CARA</p>
+                <img class="logo"src="./assets/icons8-pottery-96(1).png" alt="pottery icon">
+            <p>CARA</p>
+        </span>
+        <span class="footer_top_right">
+        <img src="./assets/icons8-twitter-96.png">
+        <img src="./assets/icons8-instagram-96.png">
+        </span>
+        </div>
+        <div class="footer_bottom">
+            <span class="footer_bottom_left">Lorem ipsum dolor sit avec</span>
+            <span class="footer_bottom_center">Lorem ipsum dolor sit avec</span>
+            <span class="footer_bottom_right">Lorem ipsum dolor sit avec</span>
+        </div>
+    </footer>
 </body>
 </html>
