fixed the titles of the products which were left over from a practice run we did yesterday

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="card">
                     <img class="card_image" src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg">
                     <h3 class="card_title">
-                        LEMON GARLIC CHICKEN :
+                        MUNDO BOWLS :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque a odio asperiores officia autem exercitationem. Odio vero nesciunt debitis facilis corporis, necessitatibus non commodi laudantium mollitia repellat provident, similique quidem.</p>
                     <a href="#">Learn More</a>
@@ -73,7 +73,7 @@
                 <div class="card">
                     <img class="card_image" src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg">
                     <h3 class="card_title">
-                        SHRIMP BURRITOS :
+                        NATUREZA VASE :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore aspernatur neque modi, pariatur sunt a nulla facere sed, iusto fuga in dolorem eos maxime nesciunt magnam, ratione non corporis porro.</p>
                     <a href="#">Learn More</a>
@@ -86,7 +86,7 @@
                 <div class="card">
                     <img class="card_image" src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg">
                     <h3 class="card_title">
-                        BAKED EGG DISH :
+                        FIERA BOWLS :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsum cumque aliquam explicabo quae voluptatem. Harum facilis ipsam sit, maxime mollitia sint quos consequuntur, similique praesentium nemo ea. Reprehenderit, perferendis?</p>
                     <a href="#">Learn More</a>
@@ -99,7 +99,7 @@
                 <div class="card">
                     <img class="card_image" src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg">
                     <h3 class="card_title">
-                        FLUFFY FRENCH TOAST :
+                        NATUREZA POTS :
                     </h3>
                     <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio reiciendis veritatis, labore beatae odit adipisci blanditiis recusandae voluptas nemo? Eius nam deserunt officiis voluptatum suscipit soluta magni corrupti ea impedit.</p>
                     <a href="#">Learn More</a>
@@ -112,7 +112,7 @@
                 <div class="card">
                     <img class="card_image" src="assets/linh-le-a0rE64YJDA4-unsplash.jpg">
                     <h3 class="card_title">
-                        BUTTERNUT SQUASH SOUP :
+                        PEDRA VASE :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quibusdam impedit maxime quod modi nesciunt, quaerat adipisci numquam assumenda labore, corporis architecto quo ut ipsum possimus tempore id hic totam?</p>
                     <a href="#">Learn More</a>
@@ -125,7 +125,7 @@
                 <div class="card">
                     <img class="card_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg">
                     <h3 class="card_title">
-                        STEAK AND BROCCOLI :
+                        VIAJA POTS :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus enim possimus magni veritatis modi voluptate, maiores labore ducimus quis exercitationem molestiae, dolores nulla voluptates. Sapiente illo quidem aspernatur facilis!</p>
                     <a href="#">Learn More</a>
@@ -138,7 +138,7 @@
                 <div class="card">
                     <img class="card_image" src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg">
                     <h3 class="card_title">
-                        FLUFFY FRENCH TOAST :
+                        SERVICO PLATES :
                     </h3>
                     <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio reiciendis veritatis, labore beatae odit adipisci blanditiis recusandae voluptas nemo? Eius nam deserunt officiis voluptatum suscipit soluta magni corrupti ea impedit.</p>
                     <a href="#">Learn More</a>
@@ -151,7 +151,7 @@
                 <div class="card">
                     <img class="card_image" src="assets/oriento-l0ah3UBLppo-unsplash.jpg">
                     <h3 class="card_title">
-                        BUTTERNUT SQUASH SOUP :
+                        CAMPEAO VASE :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quibusdam impedit maxime quod modi nesciunt, quaerat adipisci numquam assumenda labore, corporis architecto quo ut ipsum possimus tempore id hic totam?</p>
                     <a href="#">Learn More</a>
@@ -164,7 +164,7 @@
                 <div class="card">
                     <img class="card_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg">
                     <h3 class="card_title">
-                        STEAK AND BROCCOLI :
+                        TROCA BOWLS :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus enim possimus magni veritatis modi voluptate, maiores labore ducimus quis exercitationem molestiae, dolores nulla voluptates. Sapiente illo quidem aspernatur facilis!</p>
                     <a href="#">Learn More</a>
