fixed hero image with gradiant

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="style.css">
     <title>eCOMMERCE-WEB-SITE</title>
 </head>
@@ -19,9 +20,9 @@
                 </ul>
             </div>
             <div class="flex_div">
-                <p>CARA</p>
+                <p class="logo-font">CARA</p>
                     <img class="logo"src="./assets/icons8-pottery-96.png" alt="pottery icon">
-                <p>CARA</p>
+                <p class="logo-font">CARA</p>
             </div>
             <div class="search_container">      
                     <form action="/" method="GET" class="form">
@@ -37,9 +38,8 @@
     </header>
 
     <section class="hero">
-        <div class="gradient-bg"></div>
-        <!-- <h1>CERAMICS<br> CRAFTED BY<br> HAND...</h1>
-        <h1>... FROM THE <br>GROUND UP</h1> -->
+        <h4 class="hero-title-one">CERAMICS <br>CRAFTED BY <br>HAND...</h4>
+        <h4 class="hero-title-two">... FROM THE <br>GROUND UP</h4>
     </section>
     
     <main>
