added some css to the cards and about sections

--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
             <p class="about_text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quidem ipsa delectus aliquid quisquam saepe distinctio eveniet eum impedit pariatur, quasi voluptas similique quibusdam placeat eaque tempore aspernatur reiciendis exercitationem.
             </p>
-            <img src="./assets/Vase_Dame_2048x2048.jpg">
-            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg">
+            <img class="about_pic" src="./assets/Vase_Dame_2048x2048.jpg">
+            <img class="about_pic2" src="./assets/Cylinder_unglazed3_2048x2048.jpg">
         </section>
         <section>
-            <h2 id="products">PRODUCTS</h2>
+            <h2 id="products">OUR PRODUCTS</h2>
             <div class="card_container">
         
                 <a href="#">
-                <div class="card">
+                <div class="card one">
                     <img class="card_image" src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg">
                     <h3 class="card_title">
                         MUNDO BOWLS :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque a odio asperiores officia autem exercitationem. Odio vero nesciunt debitis facilis corporis, necessitatibus non commodi laudantium mollitia repellat provident, similique quidem.</p>
                     <a href="#">Learn More</a>
-                    <button>
+                    <button class="card_button">
                         ADD TO CART
                     </button>
                 </div>
                 </a>
                 <a href="#">
-                <div class="card">
+                <div class="card two">
                     <img class="card_image" src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg">
                     <h3 class="card_title">
                         NATUREZA VASE :
@@ -83,7 +83,7 @@
                 </div>
                 </a>   
                 <a href="#">
-                <div class="card">
+                <div class="card three">
                     <img class="card_image" src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg">
                     <h3 class="card_title">
                         FIERA BOWLS :
@@ -96,7 +96,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="card">
+                <div class="card four">
                     <img class="card_image" src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg">
                     <h3 class="card_title">
                         NATUREZA POTS :
@@ -109,7 +109,7 @@
                 </div>
                 </a>>
                 <a href="#">
-                <div class="card">
+                <div class="card five">
                     <img class="card_image" src="assets/linh-le-a0rE64YJDA4-unsplash.jpg">
                     <h3 class="card_title">
                         PEDRA VASE :
@@ -122,7 +122,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="card">
+                <div class="card six">
                     <img class="card_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg">
                     <h3 class="card_title">
                         VIAJA POTS :
@@ -135,7 +135,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="card">
+                <div class="card seven">
                     <img class="card_image" src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg">
                     <h3 class="card_title">
                         SERVICO PLATES :
@@ -148,7 +148,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="card">
+                <div class="card eight">
                     <img class="card_image" src="assets/oriento-l0ah3UBLppo-unsplash.jpg">
                     <h3 class="card_title">
                         CAMPEAO VASE :
@@ -161,7 +161,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="card">
+                <div class="card nine">
                     <img class="card_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg">
                     <h3 class="card_title">
                         TROCA BOWLS :
