--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         MUNDO BOWLS :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque a odio asperiores officia autem exercitationem. Odio vero nesciunt debitis facilis corporis, necessitatibus non commodi laudantium mollitia repellat provident, similique quidem.</p>
-                    <a href="#">Learn More</a>
+                    <a href="./mundo_bowls.html">Learn More</a>
                     <button>
                         ADD TO CART
                     </button>
@@ -86,7 +86,7 @@
                         NATUREZA VASE :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur, sit amet elit adipisicing elit. Inventore aspernatur neque modi, pariatur sunt a nulla facere sed, iusto fuga in dolorem eos maxime nesciunt magnam, ratione non corporis porro. Lorem ipsum dolor sit amet consectetur</p>
-                    <a href="#">Learn More</a>
+                    <a href="./natureza_vase.html">Learn More</a>
                     <button>
                         ADD TO CART
                     </button>
@@ -102,7 +102,7 @@
                         FIERA BOWLS :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor. Corrupti ipsum cumque aliquam explicabo quae voluptatem. Harum facilis ipsam sit, maxime mollitia sint quos consequuntur, similique praesentium nemo ea. Reprehenderit, perferendis? Lorem ipsum dolor sit amet consectetur.</p>
-                    <a href="#">Learn More</a>
+                    <a href="./fiera_bowls.html">Learn More</a>
                     <button>
                         ADD TO CART
                     </button>
@@ -119,7 +119,7 @@
                         NATUREZA POTS :
                     </h3>
                     <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio reiciendis veritatis, labore beatae odit adipisci blanditiis recusandae voluptas nemo? Eius nam deserunt officiis voluptatum suscipit soluta magni corrupti ea impedit. Lorem ipsum dolor sit amet consectetur.</p>
-                    <a href="#">Learn More</a>
+                    <a href="./natureza_pots.html">Learn More</a>
                     <button>
                         ADD TO CART
                     </button>
@@ -136,7 +136,7 @@
                         PEDRA VASE :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quibusdam impedit maxime quod modi nesciunt, quaerat adipisci numquam assumenda labore, corporis architecto quo ut ipsum possimus tempore id hic totam? it amet consectetur adipisicing elit</p>
-                    <a href="#">Learn More</a>
+                    <a href="./pedra_vase.html">Learn More</a>
                     <button>
                         ADD TO CART
                     </button>
@@ -153,7 +153,7 @@
                             VIAJA POTS :
                         </h3>
                         <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus enim possimus magni veritatis modi voluptate, maiores labore ducimus quis exercitationem molestiae, dolores nulla voluptates. Sapiente illo quidem aspernatur facilis!</p>
-                        <a href="#">Learn More</a>
+                        <a href="./viaja_pots.html">Learn More</a>
                         <button>
                             ADD TO CART
                         </button>
@@ -171,7 +171,7 @@
                         SERVICO PLATES :
                     </h3>
                     <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio reiciendis veritatis, labore beatae odit adipisci blanditiis recusandae voluptas nemo? Eius nam deserunt officiis voluptatum suscipit soluta magni corrupti ea impedit. it amet consectetur adipisicing elit</p>
-                    <a href="#">Learn More</a>
+                    <a href="./servico_plates.html">Learn More</a>
                     <button>
                         ADD TO CART
                     </button>
@@ -187,7 +187,7 @@
                         CAMPEAO VASE :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quibusdam impedit maxime quod modi nesciunt, quaerat adipisci numquam assumenda labore, corporis architecto quo ut ipsum possimus tempore id hic totam? it amet consectetur adipisicing elit</p>
-                    <a href="#">Learn More</a>
+                    <a href="./campeao_vase.html">Learn More</a>
                     <button>
                         ADD TO CART
                     </button>
@@ -204,7 +204,7 @@
                         TROCA BOWLS :
                     </h3>
                     <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime temporibus enim possimus magni veritatis modi voluptate, maiores labore ducimus quis exercitationem molestiae, dolores nulla voluptates. Sapiente illo quidem aspernatur facilis!</p>
-                    <a href="#">Learn More</a>
+                    <a href="./troca_bowls.html">Learn More</a>
                     <button>
                         ADD TO CART
                     </button>
