touched up the html and added prices and fixed some punctuation. Also added the very bottom text and put in all the alt descriptions for images

--- a/campeao_vase.html
+++ b/campeao_vase.html
@@ -8,7 +8,7 @@
     <title>Campeao Vase</title>
 </head>
 <body class="more_info_page">
-    <img class="link_image" src="assets/oriento-l0ah3UBLppo-unsplash.jpg"><br>
+    <img class="link_image" src="assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="Blue Vasee"><br>
                 
                     <h3 class="card_title">
                         CAMPEAO VASE :
