--- a/mundo_bowls.html
+++ b/mundo_bowls.html
@@ -9,7 +9,7 @@
 </head>
 <body class="more_info_page">
    
-<img class="link_image" src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg"><br>
+<img class="link_image" src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="mundo bowls"><br>
 <h3 class="card_title">
     MUNDO BOWLS :
 </h3>
