--- a/natureza_pots.html
+++ b/natureza_pots.html
@@ -8,7 +8,7 @@
     <title>Natureza Pots</title>
 </head>
 <body class="more_info_page">
-    <img class="link_image" src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg"><br>
+    <img class="link_image" src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="cylindrical pots"><br>
                     <h3 class="card_title">
                         NATUREZA POTS :
                     </h3>
