--- a/pedra_vase.html
+++ b/pedra_vase.html
@@ -8,7 +8,7 @@
     <title>Pedra Vase</title>
 </head>
 <body class="more_info_page">
-    <img class="link_image" src="assets/linh-le-a0rE64YJDA4-unsplash.jpg"><br>
+    <img class="link_image" src="assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="Pedra Vase"><br>
                         
                     <h3 class="card_title">
                         PEDRA VASE :
