--- a/servico_plates.html
+++ b/servico_plates.html
@@ -8,7 +8,7 @@
     <title>Servico Plates</title>
 </head>
 <body class="more_info_page">
-    <img class="link_image" src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg"><br>
+    <img class="link_image" src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="servico plates"><br>
                 
               
                     <h3 class="card_title">
