--- a/troca_bowls.html
+++ b/troca_bowls.html
@@ -8,7 +8,7 @@
     <title>Troca Bowls</title>
 </head>
 <body class="more_info_page">
-    <img class="link_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg"><br>
+    <img class="link_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Troca Bowls"><br>
                 
                     <h3 class="card_title">
                         TROCA BOWLS :
