--- a/fiera_bowls.html
+++ b/fiera_bowls.html
@@ -8,7 +8,7 @@
     <title>Fiera Bowls</title>
 </head>
 <body class="more_info_page">
-    <img class="link_image" src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg"><br>
+    <img class="link_image" src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="Fiera Bowls"><br>
                     
                     <h3 class="card_title">
                         FIERA BOWLS :
