--- a/natureza_vase.html
+++ b/natureza_vase.html
@@ -8,7 +8,7 @@
     <title>Natureza Vase</title>
 </head>
 <body class="more_info_page">
-    <img class="link_image" src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg"><br>
+    <img class="link_image" src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="Red Vase"><br>
                 
                     <h3 class="card_title">
                         NATUREZA VASE :
