--- a/viaja_pots.html
+++ b/viaja_pots.html
@@ -8,7 +8,7 @@
     <title>Viaja Pots</title>
 </head>
 <body class="more_info_page">
-    <img class="link_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg"><br>
+    <img class="link_image" src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Viaja Pots"><br>
                     
                         <h3 class="card_title">
                             VIAJA POTS :
