needed to reposition one thing on a card real quick

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h3 class="card_title">
                         MUNDO BOWLS : $48.00
                     </h3>
-                    <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque a odio asperiores officia autem exercitationem. Odio vero nesciunt debitis facilis corporis, necessitatibus non commodi laudantium mollitia repellat provident, similique quidem.</p>
+                    <p class="card_text">Lorem ipsum adi o dio adipisicing dolor sit amet consectetur adipisicing elit. Cumque a odio asperiores officia autem exercitationem. Odio vero nesciunt debitis facilis corporis, necessitatibus non commodi laudantium mollitia repellat provident, similique quidem.</p>
                     <a href="./mundo_bowls.html">Learn More</a>
                     <button>
                         ADD TO CART
